--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background-color: antiquewhite;
 text-align: center;
 padding: 40px;
 ">
-<img src='file:///C:/Users/31499/Pictures/Saved Pictures/zuoran.jpg' alt="左然" width=“80px” height="80px"/>
+<img src='pictures/zuoran.jpg' alt="左然" width=“80px” height="80px"/>
 </div>
 <div style="
 max-width: 700px;
@@ -34,7 +34,7 @@ text-align: center;
 padding: 40px;
 ">
 <p>左然小屋</p>
-<a href="file:///C:/Users/31499/Pictures/Saved Pictures/连接.jpg">友情链接</a>
+<a href="pictures/连接.jpg">友情链接</a>
 </div>
 </body>
 </html>
